# cargo-wasi-minimal-test

./: Cargo.toml  README.md
runner/: Cargo.toml
runner/src/: main.rs
wasm-lib/: Cargo.toml
